--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Online SRD for the Meteor RPG.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  jekyll
+logo: "WebsiteLogo.png"
+favicon_ico: "/favicon.svg"
+color_scheme: dark
 
 # Build settings
 # theme: just-the-docs
